# ML_Zoomcamp_2025

./: .gitignore  Data_Preprocess.ipynb  HW1.ipynb  HW2.ipynb  HW3.ipynb  HW4.ipynb  HW6.ipynb  hw3_course_lead_scoring.csv
HW10/fromHW5/: deployment.yaml
HW5/: Dockerfile  Q3.ipynb  main.py  ping.py  predict.py  pyproject.toml  test.py
HW8/: HW8.ipynb  main.py  pyproject.toml
HW9/: Dockerfile  HW9.ipynb  pyproject.toml  script.py
project1/: 1_EDA.ipynb  2_modeling_curated.ipynb  2b_xgb_diagnostics.ipynb  3_modeling_full.ipynb  4_testing.ipynb  Dockerfile  EDA.ipynb  README.md  curated_SGDEN_results.pkl  fhvhv_tripdata_2019-02_subset.parquet  full_grid_SGDEN_results.pkl  main.py  predict.py  proj_preprocess.py  pyproject.toml  train_tune_XGB.py
