[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "fastparquet>=2024.11.0",
    "pandas>=2.3.3",
    "pympler>=1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "psutil>=7.1.3",
    "pympler>=1.1",
    "tqdm>=4.67.1",
]
